# restate-operator

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Tiltfile  build.rs  justfile
.github/workflows/: ci.yml  docker.yml  release.yml
charts/restate-operator-crds/: Chart.yaml
charts/restate-operator-crds/crd-manifests/: restateclusters.yaml
charts/restate-operator-crds/crds/: restatecloudenvironments.yaml
charts/restate-operator-crds/templates/: crds.yaml
charts/restate-operator-helm/: Chart.yaml  values.yaml
charts/restate-operator-helm/charts/: restate-operator-crds-2.8.1.tgz
charts/restate-operator-helm/crd-manifests/: restatedeployments.yaml
charts/restate-operator-helm/crds/: restateclusters.yaml
charts/restate-operator-helm/templates/: _helpers.tpl  crds.yaml  deployment.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
crd/: RestateCloudCluster.pkl  RestateCloudEnvironment.pkl  RestateCluster.pkl  RestateDeployment.pkl  crd.yaml  instance.pkl  restatecloudclusters.yaml  restatecloudenvironments.yaml  restateclusters.yaml  restatedeployments.yaml
crd/examples/: restatecluster-topology.yaml  restatecluster.pkl  restatecluster.yaml  restatedeployment-knative.yaml  restatedeployment-with-options.yaml  restatedeployment.pkl  restatedeployment.yaml
crd/pklgen/: generate-cloud.pkl  generate-cluster.pkl  generate-deployment.pkl  generate.pkl
deploy/: operator.pkl
docker/: Dockerfile
docs/: minio.md  per-version-autoscaling.md
e2e/: per-version-hpa.sh
examples/: README.md
examples/cluster/: README.md  cluster.yaml
examples/services/greeter/: Dockerfile  README.md  TESTING.md  justfile  package-lock.json  package.json
examples/services/greeter/k8s/: README.md  greeter-replicaset-v1.yaml  greeter-replicaset-v2.yaml  knative-auto.yaml  knative-v1-fixed.yaml  knative-v1.yaml  knative-v2.yaml  replicaset-v1.yaml  replicaset-v2.yaml
examples/services/greeter/src/: app.ts  index.ts
hack/: README.md  kind-with-registry.sh  teardown.sh
hack/dev/: restatecluster.yaml
proto/: node_ctl_svc.proto
release-notes/: README.md  v2.3.0.md  v2.3.1.md  v2.4.0.md  v2.5.0.md  v2.5.1.md  v2.6.0.md  v2.6.1.md  v2.7.0.md  v2.8.0.md  v2.8.1.md
release-notes/unreleased/: 103-fix-gcp-workload-identity-rbac.md  127-expose-tolerations-nodeselector.md  139-hpa-selector-scoping.md  140-per-version-autoscaling.md  144-in-process-tunnel-mode.md  161-gate-crds-behind-installcrds.md  167-standalone-crds-chart.md  45-pod-annotations-and-labels.md  94-configurable-canary-image.md  96-configurable-drain-delay.md  configurable-cluster-dns.md  fix-canary-image-ca-bundle.md  gcp-workload-identity.md  iampolicymember-apiversion.md  requeue-on-active-drain.md  restatecluster-pod-lifecycle.md  trusted-ca-certs.md
src/: controller.rs  crdgen.rs  fixtures.rs  lib.rs  main.rs  metrics.rs  podidentityassociations.rs  schemagen.rs  secretproviderclasses.rs  securitygrouppolicies.rs  telemetry.rs
src/controllers/: mod.rs
src/controllers/restatecloudcluster/: controller.rs
src/controllers/restatecloudcluster/reconcilers/: mod.rs  tunnel.rs
src/controllers/restatecloudenvironment/: controller.rs  mod.rs
src/controllers/restatecloudenvironment/reconcilers/: mod.rs  tunnel.rs
src/controllers/restatecluster/: controller.rs  mod.rs
src/controllers/restatecluster/reconcilers/: compute.rs  mod.rs  network_policies.rs  provisioning.rs  quantity_parser.rs  signing_key.rs
src/controllers/restatedeployment/: controller.rs
src/controllers/restatedeployment/reconcilers/: autoscaling.rs  knative.rs  mod.rs  replicaset.rs  service.rs
src/controllers/restateservice/: controller.rs  mod.rs
src/reconcilers/: compute.rs  mod.rs  network_policies.rs  quantity_parser.rs  signing_key.rs
src/resources/: iampolicymembers.rs  knative.rs  mod.rs  podidentityassociations.rs  restatecloudclusters.rs  restatecloudenvironments.rs  restateclusters.rs  restatedeployments.rs  restateservices.rs
src/resources/knative/: configuration.rs  mod.rs  revision.rs  route.rs
yaml/: RestateCluster.pkl  crd.yaml  instance.pkl
yaml/pklgen/: PklProject  PklProject.deps.json  generate.pkl
