[package]
name = "restate-operator"
version = "0.8.0"
authors = ["restate.dev"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/restatedev/restate-operator"
description = "Restate makes distributed applications easy!"

[[bin]]
doc = false
name = "restate-operator"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
doc = false
name = "schemagen"
path = "src/schemagen.rs"

[lib]
name = "restate_operator"
path = "src/lib.rs"

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
actix-web = "4.4.0"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.21.0", features = ["latest", "schemars"] }
kube = { version = "0.88.1", features = [
    "runtime",
    "client",
    "derive",
    "unstable-runtime",
] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
prometheus = "0.13.3"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = [
    "tokio",
], optional = true }
tonic = { version = "0.9", optional = true }
thiserror = "1.0.47"
anyhow = "1.0.75"
clap = { version = "4.1", features = ["derive", "env"] }
regex = "1.10.4"
sha2 = "0.10.8"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "0.2.9"
hyper = "0.14.27"
tower-test = "0.4.0"
