[package]
name = "restate-operator"
version = "2.0.0"
authors = ["restate.dev"]
edition = "2021"
rust-version = "1.86"
license = "MIT"
repository = "https://github.com/restatedev/restate-operator"
description = "Restate makes distributed applications easy!"

[[bin]]
doc = false
name = "restate-operator"
path = "src/main.rs"

[[bin]]
doc = false
name = "cluster_crdgen"
path = "src/bin/cluster_crdgen.rs"

[[bin]]
doc = false
name = "cluster_schemagen"
path = "src/bin/cluster_schemagen.rs"

[[bin]]
doc = false
name = "deployment_crdgen"
path = "src/bin/deployment_crdgen.rs"

[[bin]]
doc = false
name = "deployment_schemagen"
path = "src/bin/deployment_schemagen.rs"

[[bin]]
doc = false
name = "cloud_crdgen"
path = "src/bin/cloud_crdgen.rs"

[[bin]]
doc = false
name = "cloud_schemagen"
path = "src/bin/cloud_schemagen.rs"

[lib]
name = "restate_operator"
path = "src/lib.rs"

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
actix-web = "4.4.0"
futures = "0.3.28"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.24.0", features = ["latest", "schemars"] }
kube = { version = "0.99.0", features = [
    "runtime",
    "client",
    "derive",
    "unstable-runtime",
] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.185", features = ["derive"] }
serde-hashkey = "0.4.5"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
prometheus = "0.14.0"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = [
    "tokio",
], optional = true }
tonic = { version = "0.9", optional = true }
thiserror = "1.0.47"
anyhow = "1.0.75"
clap = { version = "4.1", features = ["derive", "env"] }
regex = "1.10.4"
sha2 = "0.10.8"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
fnv = "1.0.7"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "0.2.9"
hyper = "0.14.27"
tower-test = "0.4.0"
