[package]
name = "restate-operator"
version = "2.2.0"
authors = ["restate.dev"]
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/restatedev/restate-operator"
description = "Restate makes distributed applications easy!"

[[bin]]
doc = false
name = "restate-operator"
path = "src/main.rs"

[[bin]]
doc = false
name = "cluster_crdgen"
path = "src/bin/cluster_crdgen.rs"

[[bin]]
doc = false
name = "cluster_schemagen"
path = "src/bin/cluster_schemagen.rs"

[[bin]]
doc = false
name = "deployment_crdgen"
path = "src/bin/deployment_crdgen.rs"

[[bin]]
doc = false
name = "deployment_schemagen"
path = "src/bin/deployment_schemagen.rs"

[[bin]]
doc = false
name = "cloud_crdgen"
path = "src/bin/cloud_crdgen.rs"

[[bin]]
doc = false
name = "cloud_schemagen"
path = "src/bin/cloud_schemagen.rs"

[lib]
name = "restate_operator"
path = "src/lib.rs"

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
anyhow = "1.0.100"
actix-web = "4.12.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
fnv = "1.0.7"
futures = "0.3.31"
k8s-openapi = { version = "0.26.1", features = ["latest", "schemars"] }
kube = { version = "2.0.1", features = ["runtime", "client", "derive", "unstable-runtime", ] }
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["tokio", "grpc-tonic"], optional = true }
prometheus = "0.14.0"
prost = "0.14.1"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", ] }
schemars = { version = "1.2.0", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-hashkey = "0.4.5"
serde_json = "1.0.147"
serde_yaml = "0.9.25"
sha2 = "0.10.8"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
tonic = { version = "0.14.2", features = ["channel"] }
tonic-prost = "0.14.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.32.0"
url = { version = "2.5.7", features = ["serde"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
http = "0.2.9"
